# mm

./: .gitignore  pyproject.toml  start_again.ipynb
mm/: api.py  config.py  covariance.py  datasets.py  design_matrix.py  exceptions.py  gaussian.py  infix_api.py  mm_imp.ipynb  models.py  optimizers.py  utils.py
tests/: test_api.py  test_covariance.py  test_datasets.py  test_design_matrix.py  test_gaussian.py  test_mixed_model.py  test_models.py
