[tool.poetry]
name = "mm"
version = "0.1.0"
description = ""
authors = ["Leo Ware <leoware@uni.minerva.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pytest = "^8.1.1"
ipython = {version = "^8.23.0", optional = true}
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
