[tool.poetry]
name = "mm"
version = "0.1.0"
description = ""
authors = ["Leo Ware <leoware@uni.minerva.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
tqdm = "^4.66.2"
torch = "^2.2.2"
ipython = {version = "^8.23.0", optional = true}
matplotlib = {version = "^3.8.4", optional = true}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
